--- a/index.html
+++ b/index.html
@@ -3,88 +3,119 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus World | 스마트농업 자동화 플랫폼</title>
+  <title>AgriNexus World | 통합 자동화 플랫폼</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
-    body { font-family: Arial; background: #f3f9f6; margin: 0; color: #1e3a34; }
+    body { font-family: Arial; margin: 0; background: #f3f9f6; color: #1e3a34; }
     header { background: #007c4d; color: white; padding: 1.5rem; text-align: center; }
     .section { max-width: 1100px; margin: 2rem auto; background: white; padding: 1.5rem; border-radius: 12px; box-shadow: 0 0 6px rgba(0,0,0,0.05); }
-    h1, h2, h3 { text-align: center; }
-    .cardbox { display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; }
-    .card { background: #f4fbf6; padding: 1rem; width: 300px; border-radius: 10px; box-shadow: 0 0 5px rgba(0,0,0,0.05); }
-    button, input, textarea, select {
-      width: 100%; margin: 0.5rem auto; padding: 1rem; font-size: 1rem;
-      border-radius: 6px; border: 1px solid #ccc; display: block;
+    h1, h2 { text-align: center; }
+    input, textarea, button {
+      width: 90%; max-width: 700px; margin: 0.5rem auto;
+      padding: 1rem; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; display: block;
     }
     button { background: #007c4d; color: white; border: none; cursor: pointer; }
-    footer { background: #1e3a34; color: white; text-align: center; padding: 2rem; font-size: 0.9rem; margin-top: 3rem; }
+    .result { margin-top: 1rem; background: #e8f6ef; padding: 1rem; border-radius: 6px; min-height: 60px; }
   </style>
 </head>
 <body>
 
 <header>
   <h1>AgriNexus World</h1>
-  <p>AI 기반 글로벌 스마트농업 자동화 + 물류 통합 플랫폼</p>
-  <div>✅ 지금 9,284명이 함께하고 있습니다</div>
+  <p>AI 스마트농업 + 물류 + 정책 + 알림 통합 플랫폼</p>
 </header>
 
 <div class="section">
-  <h2>🌱 핵심 기능 바로가기</h2>
-  <div class="cardbox">
-    <div class="card"><h3>GPT 스마트팜 상담</h3><button>실행</button></div>
-    <div class="card"><h3>정책 자동 실행</h3><button>큐 보기</button></div>
-    <div class="card"><h3>IoT 제어</h3><button>센서 제어</button></div>
-    <div class="card"><h3>모델 피드백 분석</h3><button>정확도 보기</button></div>
-    <div class="card"><h3>PDF 보고서 + 메일</h3><button>보고서 전송</button></div>
-    <div class="card"><h3>Slack / SMS 알림</h3><button>알림 전송</button></div>
-    <div class="card"><h3>물류 / 배송 추적</h3><button>위치 추적</button></div>
-    <div class="card"><h3>글로벌 작물 추천 AI</h3><button>추천 보기</button></div>
-    <div class="card"><h3>정책 워크플로우 시각화</h3><button>자동화 흐름</button></div>
-    <div class="card"><h3>📦 물류 최적화 AI</h3><button>최적 경로 분석</button></div>
-  </div>
+  <h2>📍 실시간 물류 추적 (지도 시뮬레이션)</h2>
+  <input placeholder="송장번호 또는 위치 ID 입력" />
+  <button onclick="trackMap()">실시간 추적</button>
+  <div class="result" id="mapResult">🗺️ 여기에 Google Maps 또는 위성 지도 연동</div>
 </div>
 
 <div class="section">
-  <h2>🧠 예측 모델 버전 선택</h2>
-  <select>
-    <option>AgriPredict v1.0</option>
-    <option>AgriPredict v1.1</option>
-    <option>AgriYieldMax v2.0 (고정밀)</option>
-    <option>AgriLite v1.0 (저전력용)</option>
-  </select>
-  <button>모델 실행</button>
+  <h2>📩 Slack 알림 전송</h2>
+  <textarea id="slackMsg">스마트팜 정책 실행 완료 알림</textarea>
+  <button onclick="sendSlack()">Slack 메시지 전송</button>
+  <div class="result" id="slackStatus">Slack 전송 로그</div>
 </div>
 
 <div class="section">
-  <h2>🧠 스마트팜 정책 설계 요청</h2>
-  <textarea placeholder="예: 여름철 고온 대응 스마트팜 설계"></textarea>
-  <button>GPT 기반 설계 실행</button>
+  <h2>🔐 Firebase 로그인 / 사용자 기록</h2>
+  <input id="email" placeholder="이메일" />
+  <input id="pw" placeholder="비밀번호" type="password" />
+  <button onclick="login()">로그인</button>
+  <div class="result" id="authLog">로그인 상태</div>
 </div>
 
 <div class="section">
-  <h2>🚚 물류/배송 통합 기능</h2>
-  <textarea placeholder="송장번호 또는 배송 ID 입력"></textarea>
-  <button>실시간 배송 추적</button>
-  <div>위성 기반 위치 지도 출력 (예정)</div>
-</div>
-
-<div class="section">
-  <h2>🧬 전세계 유일 AgriNexus 고급 기능</h2>
-  <ul style="text-align:left; max-width:700px; margin:auto;">
-    <li>🌍 글로벌 작물 AI 예측 추천</li>
-    <li>🛰️ 위성 기반 IoT 센서 추적</li>
-    <li>🚚 스마트팜 → 물류 → 수출까지 자동 연동</li>
-    <li>📄 PDF 보고서 + Slack + 메일 연동</li>
-    <li>💬 사용자 질문 → 정책 생성 → 실행 자동화</li>
-    <li>📦 물류 경로 최적화 AI 포함</li>
-    <li>🔄 예측 모델 다중 버전 선택 구조</li>
-  </ul>
+  <h2>🧠 GPT 기반 정책 설계</h2>
+  <textarea id="policyPrompt">여름철 온실 스마트팜 설계 요청</textarea>
+  <button onclick="runPolicyGPT()">GPT 설계 실행</button>
+  <div class="result" id="gptResult">GPT 응답 영역</div>
 </div>
 
 <footer>
-  <p>© 2024 AgriNexus World | GPT 기반 글로벌 스마트팜 자동화 플랫폼</p>
-  <p>문의: admin@agrinexus.world</p>
+  <p>© 2024 AgriNexus World | 글로벌 자동화 스마트 플랫폼</p>
 </footer>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "YOUR_FIREBASE_API_KEY",
+    authDomain: "your-project.firebaseapp.com",
+    databaseURL: "https://your-project.firebaseio.com",
+    projectId: "your-project"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.database();
+
+  function login() {
+    const email = document.getElementById("email").value;
+    const pw = document.getElementById("pw").value;
+    auth.signInWithEmailAndPassword(email, pw)
+      .then(user => {
+        db.ref("loginLogs").push({ email, time: Date.now() });
+        document.getElementById("authLog").innerText = "✅ 로그인 성공";
+      }).catch(err => {
+        document.getElementById("authLog").innerText = "❌ 로그인 실패: " + err.message;
+      });
+  }
+
+  async function sendSlack() {
+    const msg = document.getElementById("slackMsg").value;
+    await fetch("https://your-server.com/slack", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ message: msg })
+    });
+    document.getElementById("slackStatus").innerText = "✅ Slack 메시지 전송 완료";
+  }
+
+  async function runPolicyGPT() {
+    const prompt = document.getElementById("policyPrompt").value;
+    const res = await fetch("https://api.openai.com/v1/chat/completions", {
+      method: "POST",
+      headers: {
+        "Authorization": "Bearer sk-Your-GPT-API-Key",
+        "Content-Type": "application/json"
+      },
+      body: JSON.stringify({
+        model: "gpt-3.5-turbo",
+        messages: [{ role: "user", content: prompt }]
+      })
+    });
+    const data = await res.json();
+    const reply = data.choices?.[0]?.message?.content || "❌ GPT 실패";
+    document.getElementById("gptResult").innerText = reply;
+  }
+
+  function trackMap() {
+    document.getElementById("mapResult").innerText = "🛰️ 물류 위치 추적 중... (위성 지도 연동 예정)";
+  }
+</script>
 
 </body>
 </html>
