--- a/index.html
+++ b/index.html
@@ -3,42 +3,29 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus World | AI 스마트농업 자동화 플랫폼</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AgriNexus World | AI 스마트농업 자동화 포털</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body { font-family: Arial; background: #f3f9f6; margin: 0; color: #1e3a34; }
-    header { background: #007c4d; color: white; padding: 1.5rem; text-align: center; }
-    .logo { max-width: 120px; }
-    .section { max-width: 1100px; margin: 2rem auto; background: white; padding: 2rem; border-radius: 12px; box-shadow: 0 0 6px rgba(0,0,0,0.05); }
-    h1, h2 { text-align: center; }
-    .cardbox { display: flex; flex-wrap: wrap; justify-content: center; gap: 1.2rem; }
-    .card {
-      width: 300px;
-      background: #f1f9f4;
-      border-radius: 10px;
-      padding: 1rem;
-      text-align: center;
-      box-shadow: 0 0 5px rgba(0,0,0,0.04);
+    header {
+      background: #007c4d; color: white; padding: 1rem; text-align: center;
+      display: flex; align-items: center; justify-content: center; flex-direction: column;
     }
-    .card img { max-height: 50px; margin-bottom: 0.5rem; }
-    button {
-      padding: 0.8rem 1rem;
-      font-size: 1rem;
-      margin-top: 1rem;
-      border: none;
+    .logo { max-width: 120px; margin-bottom: 0.5rem; }
+    .chatbot-btn {
+      position: fixed;
+      bottom: 20px; right: 20px;
       background: #007c4d;
       color: white;
-      border-radius: 6px;
+      border: none;
+      padding: 1rem 1.5rem;
+      border-radius: 50px;
+      font-size: 1rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
       cursor: pointer;
     }
-    footer {
-      background: #1e3a34;
-      color: white;
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      margin-top: 3rem;
-    }
+    .chatbot-btn img { height: 24px; vertical-align: middle; margin-right: 0.5rem; }
+    footer { background: #1e3a34; color: white; text-align: center; padding: 2rem; font-size: 0.9rem; margin-top: 3rem; }
   </style>
 </head>
 <body>
@@ -46,59 +33,15 @@
 <header>
   <img src="agrinexus_logo.png" class="logo" />
   <h1>AgriNexus World</h1>
-  <p>AI 기반 스마트농업 + 물류 + 정책 자동화 통합 플랫폼</p>
+  <p>AI 기반 글로벌 스마트농업 자동화 + 물류 통합 포털</p>
 </header>
 
-<div class="section">
-  <h2>🌟 주요 서비스</h2>
-  <div class="cardbox">
-    <div class="card">
-      <img src="ai_gpt_icon.png" />
-      <h3>GPT 스마트팜 상담</h3>
-      <button onclick="alert('GPT 실행 연결')">실행</button>
-    </div>
-    <div class="card">
-      <img src="dashboard_icon.png" />
-      <h3>정책 자동 실행</h3>
-      <button onclick="alert('정책 실행 연결')">큐 보기</button>
-    </div>
-    <div class="card">
-      <img src="iot_icon.png" />
-      <h3>IoT 제어 센터</h3>
-      <button onclick="alert('IoT 센서 연결')">센서 제어</button>
-    </div>
-    <div class="card">
-      <img src="feedback_icon.png" />
-      <h3>AI 모델 피드백</h3>
-      <button onclick="alert('모델 정확도 제출')">정확도 보기</button>
-    </div>
-    <div class="card">
-      <img src="pdf_icon.png" />
-      <h3>보고서 + PDF 전송</h3>
-      <button onclick="alert('PDF 메일 전송 연결')">전송</button>
-    </div>
-    <div class="card">
-      <img src="slack_icon.png" />
-      <h3>Slack / SMS 알림</h3>
-      <button onclick="alert('Slack API 전송')">알림 전송</button>
-    </div>
-    <div class="card">
-      <img src="logistics_icon.png" />
-      <h3>물류 최적화 AI</h3>
-      <button onclick="alert('물류 분석 연결')">경로 분석</button>
-    </div>
-    <div class="card">
-      <img src="prediction_icon.png" />
-      <h3>예측 모델 선택</h3>
-      <button onclick="alert('예측 모델 트리거')">모델 선택</button>
-    </div>
-    <div class="card">
-      <img src="workflow_icon.png" />
-      <h3>정책 자동화 흐름</h3>
-      <button onclick="alert('워크플로우 시각화')">자동화 흐름</button>
-    </div>
-  </div>
-</div>
+<!-- 주요 콘텐츠는 그대로 유지 -->
+
+<!-- ChatGPT 기능 버튼 바 -->
+<button class="chatbot-btn" onclick="alert('GPT 챗봇 실행 창 연결 예정')">
+  <img src="ai_icon.png" /> AgriNexus GPT 상담
+</button>
 
 <footer>
   <p>© 2024 AgriNexus World | AI 스마트농업 자동화 플랫폼</p>
