--- a/index.html
+++ b/index.html
@@ -3,68 +3,133 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus World | 스마트농업 통합 포털</title>
+  <title>AgriNexus World | 스마트농업 통합 플랫폼</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body { font-family: Arial; margin: 0; background: #f3f9f6; color: #1e3a34; }
     header { background: #007c4d; color: white; padding: 1.5rem; text-align: center; }
-    .logo { max-width: 120px; }
-    .chatbot-btn {
-      position: fixed;
-      bottom: 20px; right: 20px;
-      background: #007c4d;
-      color: white;
-      border: none;
-      padding: 1rem 1.5rem;
-      border-radius: 50px;
-      font-size: 1rem;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-      cursor: pointer;
-    }
-    .chatbot-btn img { height: 24px; vertical-align: middle; margin-right: 0.5rem; }
     .cardbox { display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; padding: 2rem; }
-    .card { background: #f1f9f4; width: 300px; padding: 1rem; border-radius: 10px; text-align: center; box-shadow: 0 0 5px rgba(0,0,0,0.05); }
+    .card {
+      width: 320px; background: #f1f9f4; padding: 1rem;
+      border-radius: 10px; text-align: center;
+      box-shadow: 0 0 5px rgba(0,0,0,0.05);
+    }
+    .card button { margin-top: 1rem; background: #007c4d; color: white; border: none;
+      padding: 0.8rem 1rem; border-radius: 6px; cursor: pointer; font-size: 1rem; width: 100%; }
+    .section { display: none; margin-top: 1rem; text-align: left; background: #fff; padding: 1rem; border-radius: 8px; }
     footer { background: #1e3a34; color: white; text-align: center; padding: 2rem; margin-top: 2rem; font-size: 0.9rem; }
   </style>
+  <script>
+    function toggle(id) {
+      document.querySelectorAll('.section').forEach(s => s.style.display = 'none');
+      document.getElementById(id).style.display = 'block';
+    }
+  </script>
 </head>
 <body>
 
 <header>
-  <img src="agrinexus_logo.png" class="logo" />
   <h1>AgriNexus World</h1>
-  <p>AI 스마트농업 + 정책 + 물류 + 알림 + 보고서 통합 포털</p>
+  <p>AI 스마트농업 + 물류 + 정책 + 투자 + 정보 + 판매 통합 플랫폼</p>
 </header>
 
 <div class="cardbox">
+
   <div class="card">
-    <h3>📈 실시간 정책 통계</h3>
-    <p>실행 내역, 피드백 통계, 예측 정확도 자동 표시</p>
-    <button onclick="alert('정책 통계 실행')">통계 보기</button>
+    <h3>🌿 스마트팜</h3>
+    <button onclick="toggle('smartfarm')">세부 기능 열기</button>
   </div>
+
   <div class="card">
-    <h3>🛠 관리자 도구</h3>
-    <p>승인 내역, 정책 설정, Slack 로그 등 통합 관리</p>
-    <button onclick="alert('관리자 페이지 이동')">관리자 열기</button>
+    <h3>🚛 물류 / 배송</h3>
+    <button onclick="toggle('logistics')">세부 기능 열기</button>
   </div>
+
   <div class="card">
-    <h3>📢 Slack 통합</h3>
-    <p>정책 실행 → Slack 알림 → PDF 보고서 자동 전송</p>
-    <button onclick="alert('Slack 연결 테스트')">슬랙 확인</button>
+    <h3>📊 통계 / 정보</h3>
+    <button onclick="toggle('statistics')">세부 기능 열기</button>
   </div>
+
   <div class="card">
-    <h3>👥 사용자 통계</h3>
-    <p>가입자 수, 사용량 추적, 행동 분석</p>
-    <button onclick="alert('사용자 통계 보기')">통계 보기</button>
+    <h3>🏛️ 정책 / 투자</h3>
+    <button onclick="toggle('policy')">세부 기능 열기</button>
   </div>
+
+  <div class="card">
+    <h3>🛍️ 판매자 기능</h3>
+    <button onclick="toggle('seller')">세부 기능 열기</button>
+  </div>
+
 </div>
 
-<!-- GPT 버튼 → chat.html 팝업으로 연결 -->
-<button class="chatbot-btn" onclick="window.open('chat.html', '_blank', 'width=500,height=600')">
-  🤖 AgriNexus GPT 상담
+<!-- 세부 카드 내용 -->
+<div class="cardbox">
+
+  <div class="section" id="smartfarm">
+    <h4>🌿 스마트팜 기능</h4>
+    <ul>
+      <li>GPT 기반 스마트팜 설계</li>
+      <li>작물 재배 추천 시스템</li>
+      <li>AI 기반 수확량 예측</li>
+      <li>자동 환경 제어 (온도, 습도, 조도 등)</li>
+      <li>스마트 센서 연결 및 실시간 모니터링</li>
+    </ul>
+  </div>
+
+  <div class="section" id="logistics">
+    <h4>🚚 물류 / 배송 기능</h4>
+    <ul>
+      <li>배송 상태 실시간 추적</li>
+      <li>위성 기반 배송 경로 지도 연동</li>
+      <li>수출 문서 자동 생성 (B/L, 인보이스, 패킹리스트)</li>
+      <li>배송사 연동 API</li>
+      <li>물류 최적 경로 분석 AI</li>
+    </ul>
+  </div>
+
+  <div class="section" id="statistics">
+    <h4>📈 통계 / 정보 분석</h4>
+    <ul>
+      <li>스마트팜 센서 데이터 수집</li>
+      <li>시장 가격 변동 시각화</li>
+      <li>작물별 생산성 그래프</li>
+      <li>지역별 농업 통계 + 기후 변화 정보</li>
+      <li>예측 정확도 피드백 통계</li>
+    </ul>
+  </div>
+
+  <div class="section" id="policy">
+    <h4>🏛️ 정책 / 투자 연결</h4>
+    <ul>
+      <li>국가별 농업 정책 요약</li>
+      <li>도시별 재배 지원 정책</li>
+      <li>농업 보조금 / 창업 자금 안내</li>
+      <li>투자자 연계 시스템 (국내외)</li>
+      <li>GPT로 정책 자동 분석</li>
+    </ul>
+  </div>
+
+  <div class="section" id="seller">
+    <h4>🛍️ 판매자 전용 기능</h4>
+    <ul>
+      <li>작물 상품 등록</li>
+      <li>가격 자동 추천 시스템</li>
+      <li>유통 → 물류 → 고객까지 자동 연동</li>
+      <li>상품별 재고 관리</li>
+      <li>보고서 자동 생성 및 판매 예측</li>
+    </ul>
+  </div>
+
+</div>
+
+<!-- 고정 GPT 버튼 -->
+<button class="chatbot-btn" style="position:fixed;right:20px;bottom:20px;background:#007c4d;color:#fff;padding:1rem 2rem;border:none;border-radius:30px;box-shadow:0 2px 10px rgba(0,0,0,0.2);cursor:pointer;" onclick="window.open('chat.html','_blank','width=500,height=600')">
+🤖 AgriNexus GPT 상담
 </button>
 
 <footer>
-  <p>© 2024 AgriNexus World | AI 스마트농업 자동화 플랫폼</p>
+  <p>© 2024 AgriNexus World | 스마트농업 자동화 플랫폼</p>
+  <p>문의: admin@agrinexus.world</p>
 </footer>
 
 </body>
