--- a/index.html
+++ b/index.html
@@ -3,60 +3,35 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus World | 스마트팜 세부 기능 확장</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AgriNexus World | 스마트팜 기능 포털</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { font-family: Arial; background: #f9fdfc; padding: 2rem; color: #1e3a34; }
-    h1 { text-align: center; color: #007c4d; }
-    ul { max-width: 900px; margin: auto; background: #fff; padding: 2rem; border-radius: 12px; box-shadow: 0 0 8px rgba(0,0,0,0.05); }
-    li { margin-bottom: 0.75rem; line-height: 1.6; }
+    body { font-family: Arial; background: #f3f9f6; margin: 0; color: #1e3a34; }
+    header { background: #007c4d; color: white; padding: 1.5rem; text-align: center; }
+    .card { background: #f1f9f4; max-width: 1100px; margin: 2rem auto; padding: 2rem; border-radius: 12px; box-shadow: 0 0 6px rgba(0,0,0,0.05); }
+    .card h2 { margin-top: 0; }
+    ul { padding: 1rem; list-style: square; line-height: 1.7; }
+    li { margin-bottom: 0.5rem; }
+    footer { background: #1e3a34; color: white; text-align: center; padding: 2rem; margin-top: 3rem; font-size: 0.9rem; }
   </style>
 </head>
 <body>
 
-<h1>🌿 AgriNexus 스마트팜 전체 세부 기능</h1>
-<ul>
-<li>001. 스마트팜 AI 작물 추천 시스템</li>
-<li>002. 실시간 IoT 센서 제어 및 모니터링 대시보드</li>
-<li>003. 자동 재배 일정 생성 및 경고 시스템</li>
-<li>004. 수확량 예측 AI 모델</li>
-<li>005. 국가별 최적 작물 추천 알고리즘</li>
-<li>006. 위성 기반 기후/토양 분석 시스템</li>
-<li>007. 스마트팜 설계 자동화 도면 생성기</li>
-<li>008. AI 기반 스마트팜 3D 시뮬레이션 영상 생성</li>
-<li>009. 음성 내레이션 포함 IR 프레젠테이션 자동 생성</li>
-<li>010. 스마트팜 기자재/자재/설비 자동 선택 최적화</li>
-<li>011. 글로벌 종자 비교 분석 시스템</li>
-<li>012. AI 기반 병해충 진단 및 대응 시스템</li>
-<li>013. 자동 급수/환기/조명 제어 시스템</li>
-<li>014. 모바일 연동 푸시 알림 기능 (센서/수익/이상 감지)</li>
-<li>015. 관리자용 통합 제어판 + 자동 보고서 생성</li>
-<li>016. 수출입 절차 문서 자동 생성 시스템</li>
-<li>017. 국내외 식량안보/정책 분석 기반 설계 최적화</li>
-<li>018. 스마트팜 수익성 분석 및 투자 유치 예측 시스템</li>
-<li>019. 글로벌 맞춤형 설계~수출 전자동화 시스템</li>
-<li>020. 유저 도면 기반 AI 자동설계 + 장비 구성 시스템</li>
-<li>021. IR 제안서 자동화 + 계약서 PDF 생성 시스템</li>
-<li>022. 계약서 조항별 요약 및 자동 설명 생성기</li>
-<li>023. 다국어 변환 + 글로벌 계약 번역 시스템</li>
-<li>024. 수확 후 판매/물류/수출 자동화 시스템</li>
-<li>025. 글로벌 스마트팜 매칭 및 투자자 자동 연결 시스템</li>
-<li>026. AI 기반 유통/배송 최적 경로 자동 제안 시스템</li>
-<li>027. 스마트팜 운영 영상 자동 기록 + 대시보드 시각화</li>
-<li>028. 전세계 스마트팜 데이터 기반 ESG/위험 분석 시스템</li>
-<li>029. 농산물 가격 예측 + 국가별 수요분석 시스템</li>
-<li>030. 스마트팜 One-Stop After-Service 통합 시스템</li>
-<li>031. 실시간 스마트팜 상태 분석 + 자동 조치 시스템</li>
-<li>032. 자가 학습형 기능 자동 업그레이드 시스템</li>
-<li>033. 실시간 PDF 보고서 + Slack 연동 + 승인 자동화</li>
-<li>034. 스마트폰 설치형 앱(PWA) 변환 + 알림 시스템</li>
-<li>035. 구매자-판매자 자동 매칭 + 가격 협상 기능</li>
-<li>036. 글로벌 스마트팜 홍보용 AI 기사 자동 생성기</li>
-<li>037. 계약·제안·보고서 메일 전송 자동화</li>
-<li>038. 실시간 배송비 비교 시스템 + Forwarder 매칭</li>
-<li>039. 스마트팜 설치 브랜드/부품/나사까지 자동 최적화</li>
-<li>040. 통합 관리자 /admin 대시보드 및 통계 시스템</li>
-</ul>
+<header>
+  <h1>AgriNexus World</h1>
+  <p>AI 스마트팜 자동화 플랫폼 - 전체 기능 통합</p>
+</header>
+
+<div class="card">
+  <h2>🌿 스마트팜 전체 기능 (자동 연결)</h2>
+  <ul>
+    <li>001. 스마트팜 AI 작물 추천 시스템</li><li>002. 실시간 IoT 센서 제어 및 모니터링 대시보드</li><li>003. 자동 재배 일정 생성 및 경고 시스템</li><li>004. 수확량 예측 AI 모델</li><li>005. 국가별 최적 작물 추천 알고리즘</li><li>006. 위성 기반 기후/토양 분석 시스템</li><li>007. 스마트팜 설계 자동화 도면 생성기</li><li>008. AI 기반 스마트팜 3D 시뮬레이션 영상 생성</li><li>009. 음성 내레이션 포함 IR 프레젠테이션 자동 생성</li><li>010. 스마트팜 기자재/자재/설비 자동 선택 최적화</li><li>011. 글로벌 종자 비교 분석 시스템</li><li>012. AI 기반 병해충 진단 및 대응 시스템</li><li>013. 자동 급수/환기/조명 제어 시스템</li><li>014. 모바일 연동 푸시 알림 기능 (센서/수익/이상 감지)</li><li>015. 관리자용 통합 제어판 + 자동 보고서 생성</li><li>016. 수출입 절차 문서 자동 생성 시스템</li><li>017. 국내외 식량안보/정책 분석 기반 설계 최적화</li><li>018. 스마트팜 수익성 분석 및 투자 유치 예측 시스템</li><li>019. 글로벌 맞춤형 설계~수출 전자동화 시스템</li><li>020. 유저 도면 기반 AI 자동설계 + 장비 구성 시스템</li><li>021. IR 제안서 자동화 + 계약서 PDF 생성 시스템</li><li>022. 계약서 조항별 요약 및 자동 설명 생성기</li><li>023. 다국어 변환 + 글로벌 계약 번역 시스템</li><li>024. 수확 후 판매/물류/수출 자동화 시스템</li><li>025. 글로벌 스마트팜 매칭 및 투자자 자동 연결 시스템</li><li>026. AI 기반 유통/배송 최적 경로 자동 제안 시스템</li><li>027. 스마트팜 운영 영상 자동 기록 + 대시보드 시각화</li><li>028. 전세계 스마트팜 데이터 기반 ESG/위험 분석 시스템</li><li>029. 농산물 가격 예측 + 국가별 수요분석 시스템</li><li>030. 스마트팜 One-Stop After-Service 통합 시스템</li><li>031. 실시간 스마트팜 상태 분석 + 자동 조치 시스템</li><li>032. 자가 학습형 기능 자동 업그레이드 시스템</li><li>033. 실시간 PDF 보고서 + Slack 연동 + 승인 자동화</li><li>034. 스마트폰 설치형 앱(PWA) 변환 + 알림 시스템</li><li>035. 구매자-판매자 자동 매칭 + 가격 협상 기능</li><li>036. 글로벌 스마트팜 홍보용 AI 기사 자동 생성기</li><li>037. 계약·제안·보고서 메일 전송 자동화</li><li>038. 실시간 배송비 비교 시스템 + Forwarder 매칭</li><li>039. 스마트팜 설치 브랜드/부품/나사까지 자동 최적화</li><li>040. 통합 관리자 /admin 대시보드 및 통계 시스템</li>
+  </ul>
+</div>
+
+<footer>
+  <p>© 2024 AgriNexus World | 글로벌 스마트팜 자동화 플랫폼</p>
+</footer>
 
 </body>
 </html>
